--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
         <div class="sponsor-block gold">
             <h2>Gold Sponsors</h2>
             <div class="logo-container">
-                <img src="images/Empty.png" alt="Gold Sponsor 1">
-                <img src="images/Empty.png" alt="Gold Sponsor 2">
+                <img src="images/bss.png" alt="Gold Sponsor 1">
+                <img src="images/platos.png" alt="Gold Sponsor 2">
+                <img src="images/indigo.png" alt="Gold Sponsor 3">
             </div>
         </div>
 
@@ -46,8 +47,9 @@
         <div class="sponsor-block silver">
             <h2>Silver Sponsors</h2>
             <div class="logo-container">
-                <img src="images/Empty.png" alt="Silver Sponsor 1">
-                <img src="images/Empty.png" alt="Silver Sponsor 2">
+                <img src="images/uhu.png" alt="Silver Sponsor 1">
+                <img src="images/fabrecastel.png" alt="Silver Sponsor 2">
+                <img src="images/bachaparty.png" alt="Silver Sponsor 3">
             </div>
         </div>
 
@@ -55,8 +57,8 @@
         <div class="sponsor-block bronze">
             <h2>Bronze Sponsors</h2>
             <div class="logo-container">
-                <img src="images/Empty.png" alt="Bronze Sponsor 1">
-                <img src="images/Empty.png" alt="Bronze Sponsor 2">
+                <img src="images/ssfh.png" alt="Bronze Sponsor 1">
+                <img src="images/cac.png" alt="Bronze Sponsor 2">
             </div>
         </div>
 
@@ -64,9 +66,11 @@
         <div class="sponsor-block valued">
             <h2>Valued Partners</h2>
             <div class="logo-container">
-                <img src="images/Empty.png" alt="Valued Partner 1">
-                <img src="images/Empty.png" alt="Valued Partner 2">
-                <img src="images/Empty.png" alt="Valued Partner 3">
+                <img src="images/image.png" alt="Valued Partner 1">
+                <img src="images/brainswarm.png" alt="Valued Partner 2">
+                <img src="images/CodnBotslogo.png" alt="Valued Partner 3">
+                <img src="images/Align.png" alt="Valued Partner 4">
+                <img src="images/zencode.jpg" alt="Valued Partner 5">
             </div>
         </div>
 
