--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <div class="sponsor-block gold">
             <h2>Gold Sponsors</h2>
             <div class="logo-container">
+                <img src="images/TechTics.png" alt="Gold Sponsor 0">
                 <img src="images/bss.png" alt="Gold Sponsor 1">
                 <img src="images/platos.png" alt="Gold Sponsor 2">
                 <img src="images/indigo.png" alt="Gold Sponsor 3">
