--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="text-section">
             <h1>RoboFest 2025</h1>
             <p>Sustain | Innovate | Protect</p>
-            <p>Celebrating Our Amazing Partners</p>
+            <p>Robotics for a better tomorrow</p>
         </div>
         <div class="meet-strip">
             <h2>Sponsors & Collaborators</h2>
