--- a/index.html
+++ b/index.html
@@ -34,12 +34,20 @@
     <!-- Sponsor Sections -->
     <div class="sponsor-container">
 
+        <!-- Venue Collaboration Section -->
+        <div class="venue-collaboration">
+            <h2>Venue Collaboration</h2>
+            <div class="logo-container">
+                <img src="images/bss.png" alt="Vennue Collaborator"> 
+            </div>
+        </div>
+
         <!-- Gold Sponsors -->
         <div class="sponsor-block gold">
             <h2>Gold Sponsors</h2>
             <div class="logo-container">
                 <img src="images/TechTics.png" alt="Gold Sponsor 0">
-                <img src="images/bss.png" alt="Gold Sponsor 1">
+                <img src="images/airo.png" alt="Gold Sponsor 2">
                 <img src="images/platos.png" alt="Gold Sponsor 2">
                 <img src="images/indigo.png" alt="Gold Sponsor 3">
             </div>
